--- a/templates/uswildfires.html
+++ b/templates/uswildfires.html
@@ -29,9 +29,9 @@
             <a class="dropdown-item" href="acresburned.html">Affected Acres by County per Year</a>
           </div>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="earthquakes.html">Earthquakes<span class="sr-only">(current)</span></a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="data.html">Data<span class="sr-only">(current)</span></a>
         </li>
@@ -51,6 +51,9 @@
             <option value="2013">2013</option>
             <option value="2014">2014</option>
             <option value="2015">2015</option>
+            <option value="2016">2016</option>
+            <option value="2017">2017</option>
+            <option value="2018">2018</option>
           </select></p>
           <div class="main-content row">
             <img src="Images/USWildFires.png">
