changes to landing page boxes and images added

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -49,52 +49,17 @@
     <!--Containers-->
       <div class="container">
         <div class="row">
-          <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="box">
-              <h3>Summary: Latitute vs. X</h3>
+              <h3>California Wildfires</h3>
               <hr>
-              <img class="main-image" src="Res02_Max_Temp.png" alt="Max Temperature">
-              <p> The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis,
-                  we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-              <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude.
-                  Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the
-                  source data and visualizations created as part of the analysis, as well as explanations and descriptions of
-                  any trends and correlations witnessed.</p>
+              <img class="main-image" src="../Resources/Images/landing_image.jpg" alt="Raging Fire">
+                <p>Priority of the project is to gather data of forest fires in California and produce the story of the reasons and locations of such events for the past few decades. We will also attempt to tell the story of any correlations which may exist with temperature increases due to global warming and perhaps earthquakes.</p>
+                <p>Our inspiration is due to an increase of such fires and their close proximity to populated areas.  The proximity to populated areas is not just the fires but ash and amber which may travel up to 10 miles. Furthermore, the pollution and air quality in an area much larger than the ground covered by the fires. As a case in point, the recent wild fires during August of 2018 had covered one third of the air space over the state of California.</p>  
             </div>
           </div>
-          <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
-              <div class="box">
-                <h3>Visualizations</h3>
-                <hr>
-                <div class="container">
-                  <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-3 col-xs-3">
-                      <a href="02_max_temp.html">
-                        <img src="Res02_Max_Temp.png" alt="Max Temperature">
-                      </a>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-3 col-xs-3">
-                      <a href="02_humidity.html">
-                        <img src="Res02_Humidity.png" alt="Humidity">
-                      </a>
-                    </div>  
-                  
-                      <div class="col-lg-6 col-md-6 col-sm-3 col-xs-3">
-                        <a href="02_cloudiness.html">
-                          <img src="Res02_Cloudiness.png" alt="Cloudiness">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-sm-3 col-xs-3">
-                        <a href="02_wind_speed.html">
-                          <img src="Res02_Wind_Speed.png" alt="Wind Speed">
-                        </a>
-                      </div>  
-                    </div>
-                  </div>
-              </div>
-            </div>
-            </div>
-</div>
+          </div>
+        </div>
     <!-- Optional JavaScript -->
     <script src="js/scripts.js"></script>
 
@@ -107,7 +72,7 @@
 
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">© 2018 Copyright:
-        <a href="01_landing.html"> Lattitude.com</a>
+        <a href="landing.html"> CaliFuego</a>
       </div>
 
   </footer>
