--- a/templates/mapped_fires_byYear.html
+++ b/templates/mapped_fires_byYear.html
@@ -12,32 +12,33 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: red;">
-    <a class="navbar-brand" href="index.html">Project FireQuake</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Wild-Fires
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="uswildfires.html">US Wild-Fires per Year</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="acresburned.html">Affected Acres by County per Year</a>
-          </div>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="earthquakes.html">Earthquakes<span class="sr-only">(current)</span></a>
-        </li> -->
-        <li class="nav-item">
-          <a class="nav-link" href="data.html">Data<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="landing.html">CaliFuego</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                  
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Visualizations
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="realTime_fires.html">Real-time Fires</a>
+                        <a class="dropdown-item" href="mapped_fires_byYear.html">Mapped Fires by Year</a>
+                        <a class="dropdown-item" href="total_fires_byYear">Yearly Totals Line Graph</a>
+                      </div>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="resources.html">Resources</a>
+                  </li>
+                </ul>
+                
+              </div>
+        </nav>
   <div class="container">
     <article class="main-content row">
       <div class="col-md-12">
