--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,1 +1,63 @@
-nav{background-color: aqua}
+body {
+    padding: 0;
+    margin: 0;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 18px;
+    line-height: 150%;
+    color: black;
+    background:rgb(235,235,235);
+  }
+
+  img{
+    max-width: 100%;
+    height: auto;
+    padding-bottom: 1em;
+  }
+
+  .main-image{
+    max-width: 66%;
+    height: auto;
+    padding: 1em;
+    float: left;
+  }
+  .box{
+    margin: 1em;
+    padding: 2em;
+    background-color: white;
+  }
+
+  
+  .main-container{
+    margin: 1em;
+    padding: 1em;
+    background-color: white;
+}
+
+nav{
+  background-color: rgb(55,23,116);
+}
+
+.navbar-brand{
+
+}
+
+.navbar-toggler{
+
+}
+
+.navbar-toggler-icon{
+
+}
+
+footer{
+  background-color:#333;
+  width: 100%;
+  color: white;
+  border-top-color: #666;
+  border-top-width: .5em;
+  border-top-style: solid;
+}
+
+footer-copyright.text-center.py3{
+background-color: blue;
+}
