--- a/templates/realTime_fires.html
+++ b/templates/realTime_fires.html
@@ -11,51 +11,64 @@
   <link rel="stylesheet" href="styles.css" media="screen">
 </head>
 
-<body>
-  <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="landing.html">CaliFuego</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Visualizations
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="realTime_fires.html">Real-time Fires</a>
-                  <a class="dropdown-item" href="mapped_fires_byYear.html">Mapped Fires by Year</a>
-                  <a class="dropdown-item" href="total_fires_byYear">Yearly Totals Line Graph</a>
-                </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="resources.html">Resources</a>
-            </li>
-          </ul>
+  <body>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="landing.html">CaliFuego</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
           
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Visualizations
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="realTime_fires.html">Real-time Fires</a>
+                    <a class="dropdown-item" href="mapped_fires_byYear.html">Mapped Fires by Year</a>
+                    <a class="dropdown-item" href="total_fires_byYear">Yearly Totals Line Graph</a>
+                  </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="resources.html">Resources</a>
+              </li>
+            </ul>
+            
+          </div>
+    </nav>
+
+    <!--Containers-->
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div class="box">
+            <h3>Current Wildfires in California</h3>
+            <hr>
+            <iframe src="https://www.google.com/maps/d/embed?mid=1HacmM5E2ueL-FT2c6QMVzoAmE5M19GAf" width="100%" height="480"></iframe>
+            <img src="../Resources/Images/Legend.png" alt="Legend">    
+          </div>
         </div>
-</nav>
-  <div class="container">
-      <section class="row">
-        <div class="col-md-12">
-          <article class="main-content">
-            <h2 class="description-header">Current Wild-Fires in California</h2>
-            <hr class="description-hr"/>
-			<iframe src="https://www.google.com/maps/d/embed?mid=1HacmM5E2ueL-FT2c6QMVzoAmE5M19GAf" width="100%" height="480"></iframe>
-			<img src="../Resources/Images/Legend.png" alt="Legend">
-            <p>Priority of the project is to gather data of forest fires in California and produce the story of the reasons and locations of such events for the past few decades. We will also attempt to tell the story of any correlations which may exist with temperature increases due to global warming and perhaps earthquakes.</p>
-            <p>Our inspiration is due to an increase of such fires and their close proximity to populated areas.  The proximity to populated areas is not just the fires but ash and amber which may travel up to 10 miles. Furthermore, the pollution and air quality in an area much larger than the ground covered by the fires. As a case in point, the recent wild fires during August of 2018 had covered one third of the air space over the state of California.</p>
-          </article>
-        </div>
-      </section>
+      </div>
     </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+
+      <!-- Optional JavaScript -->
+      <script src="js/scripts.js"></script>
+
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Footer -->
+    <footer class="page-footer font-small blue pt-4">
+  
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2018 Copyright:
+          <a href="landing.html"> CaliFuego</a>
+        </div>
+    </footer>
+  </body>
 
 </html>
