--- a/templates/total_fires_byYear.html
+++ b/templates/total_fires_byYear.html
@@ -28,7 +28,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="realTime_fires.html">Real-time Fires</a>
                       <a class="dropdown-item" href="mapped_fires_byYear.html">Mapped Fires by Year</a>
-                      <a class="dropdown-item" href="total_fires_byYear">Yearly Totals Line Graph</a>
+                      <a class="dropdown-item" href="total_fires_byYear.html">Yearly Totals Line Graph</a>
                     </div>
                 </li>
                 <li class="nav-item">
