--- a/templates/resources.html
+++ b/templates/resources.html
@@ -20,7 +20,7 @@
   <body>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="landing.html">CaliFuego</a>
+        <a class="navbar-brand" href="index.html">CaliFuego</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -71,7 +71,7 @@
 
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">© 2018 Copyright:
-        <a href="landing.html"> CaliFuego</a>
+        <a href="index.html"> CaliFuego</a>
       </div>
 
   </footer>
