editing total_fires_byYear.html

--- a/templates/mapped_fires_byYear.html
+++ b/templates/mapped_fires_byYear.html
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <div class="box">
-            <h3>Fires by Year</h3>
+            <h3>Mapped Fires by Year</h3>
             <hr>
             <p class="description-text">Select the year:  
               <select>
