--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: Georgia, "Times New Roman", Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     line-height: 150%;
     color: black;
